using UnityEditor;
using UnityEngine;


    public class AnimationVariables
    {
    public const string RUN = "Forward";
    public const string IS_FALLING = "isFalling";
    public const string IS_JUMPING = "isJumping";
    public const string IS_GROUNDED = "isGrounded";
    public const string IS_GRABBING_LEDGE = "isGrabbingLedge";
    public const string IS_CLIMBING_LEDGE = "isClimbingLedge";
    }
